Made bug fixes and alignment fixes

--- a/statics/chat.css
+++ b/statics/chat.css
@@ -133,8 +133,8 @@ hr{
 }
 
 .emoji-picker-icon {
-    right: 90px !important;
-    top: -6px !important;
+    right: 80px !important;
+    top: -35px !important;
 }
 
 .emoji-picker-container{
